# drf

./: .coverage  data.json  pyproject.toml  requirements.txt  task_run
config/: settings.py  urls.py
lms/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/services/: payments.py  subsribtions.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: create_superuser.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py
